[gd_scene load_steps=3 format=2]

[ext_resource path="res://RichTextLabel.gd" type="Script" id=1]
[ext_resource path="res://MainScene.gd" type="Script" id=2]

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 50.0
margin_top = 517.0
margin_right = 220.0
margin_bottom = 568.0
text = "DISPLAY (1)"

[node name="Button2" type="Button" parent="."]
margin_left = 304.0
margin_top = 517.0
margin_right = 474.0
margin_bottom = 568.0
text = "DISPLAY (2)"

[node name="Input2" type="Button" parent="."]
margin_left = 304.0
margin_top = 176.0
margin_right = 474.0
margin_bottom = 227.0
text = "INPUT LISTA"

[node name="Input3" type="Button" parent="."]
margin_left = 800.0
margin_top = 176.0
margin_right = 970.0
margin_bottom = 227.0
text = "INPUT VALOR"

[node name="Button3" type="Button" parent="."]
margin_left = 554.0
margin_top = 517.0
margin_right = 724.0
margin_bottom = 568.0
text = "DISPLAY (3)"

[node name="Button4" type="Button" parent="."]
margin_left = 800.0
margin_top = 517.0
margin_right = 970.0
margin_bottom = 568.0
text = "DISPLAY (4)"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 33.0
margin_top = 48.0
margin_right = 214.0
margin_bottom = 481.0
custom_colors/default_color = Color( 0.972549, 0.972549, 0.972549, 1 )
script = ExtResource( 1 )

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 304.0
margin_top = 260.0
margin_right = 485.0
margin_bottom = 481.0
custom_colors/default_color = Color( 0.972549, 0.972549, 0.972549, 1 )
script = ExtResource( 1 )

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 554.0
margin_top = 48.0
margin_right = 735.0
margin_bottom = 481.0
custom_colors/default_color = Color( 0.972549, 0.972549, 0.972549, 1 )
script = ExtResource( 1 )

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 800.0
margin_top = 279.0
margin_right = 981.0
margin_bottom = 481.0
custom_colors/default_color = Color( 0.972549, 0.972549, 0.972549, 1 )
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 304.0
margin_top = 78.0
margin_right = 474.0
margin_bottom = 161.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 800.0
margin_top = 78.0
margin_right = 970.0
margin_bottom = 161.0

[node name="Label" type="Label" parent="."]
margin_left = 93.0
margin_top = 19.0
margin_right = 162.0
margin_bottom = 78.0
text = "Pergunta1"

[node name="Label2" type="Label" parent="."]
margin_left = 354.0
margin_top = 19.0
margin_right = 423.0
margin_bottom = 78.0
text = "Pergunta2
"

[node name="Label3" type="Label" parent="."]
margin_left = 602.0
margin_top = 19.0
margin_right = 671.0
margin_bottom = 78.0
text = "Pergunta3
"

[node name="Label4" type="Label" parent="."]
margin_left = 848.0
margin_top = 19.0
margin_right = 917.0
margin_bottom = 78.0
text = "Pergunta4
"

[node name="Label5" type="Label" parent="."]
margin_left = 800.0
margin_top = 244.0
margin_right = 953.0
margin_bottom = 303.0
text = "O seu valor e:
"

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 264.0
margin_top = 19.0
margin_right = 268.0
margin_bottom = 568.0

[node name="VSeparator2" type="VSeparator" parent="."]
margin_left = 760.0
margin_top = 19.0
margin_right = 764.0
margin_bottom = 568.0

[node name="VSeparator3" type="VSeparator" parent="."]
margin_left = 515.0
margin_top = 19.0
margin_right = 519.0
margin_bottom = 568.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Input2" to="." method="_on_Input2_pressed"]
[connection signal="pressed" from="Input3" to="." method="_on_Input3_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
